<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <!--标题区域-->
    <include layout="@layout/view_title_bar"/>

    <!--账号区域-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/account_tv"
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:text="@string/account_text"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/account_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/account_hint"
            android:maxLength="16"
            android:maxLines="1"
            android:padding="6dp"
            android:textSize="18sp"/>
    </LinearLayout>

    <include layout="@layout/view_split_line"/>

    <!--密码区域-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/password_tv"
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:text="@string/password_text"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/password_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:padding="6dp"
            android:textSize="16sp"/>
    </LinearLayout>

    <include layout="@layout/view_split_line"/>

    <!--确认密码区域-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/re_password_tv"
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/re_password_text"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/re_password_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/re_password_hint"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:padding="6dp"
            android:textSize="16sp"/>
    </LinearLayout>

    <include layout="@layout/view_split_line"/>

    <!--真实姓名区域-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/real_name_tv"
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:text="@string/real_name_text"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/real_name_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/real_name_hint"
            android:maxLength="16"
            android:maxLines="1"
            android:padding="6dp"
            android:textSize="16sp"/>
    </LinearLayout>

    <include layout="@layout/view_split_line"/>

    <!--身份证号区域-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/id_number_tv"
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:text="@string/id_number_text"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/id_number_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/id_number_hint"
            android:maxLength="18"
            android:maxLines="1"
            android:padding="6dp"
            android:textSize="16sp"/>
    </LinearLayout>

    <include layout="@layout/view_split_line"/>

    <!--用户类型区域-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/user_type_tv"
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/user_type_text"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/adult_type_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/user_type_adult"
                android:textSize="16sp"/>

            <RadioButton
                android:id="@+id/student_type_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/user_type_student"
                android:textSize="16sp"/>
        </RadioGroup>
    </LinearLayout>

    <include layout="@layout/view_split_line"/>

    <!--登录注册按钮区域-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/register_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/common_btn_bg"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/register_text"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>

</LinearLayout>
