<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <!--标题区域-->
    <include layout="@layout/view_title_bar"/>

    <!--原密码区域-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/old_password_text"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/old_password_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/old_password_hint"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:padding="6dp"
            android:textSize="16sp"/>
    </LinearLayout>

    <include layout="@layout/view_split_line"/>

    <!--新密码区域-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/new_password_text"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/new_password_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/new_password_hint"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:padding="6dp"
            android:textSize="16sp"/>
    </LinearLayout>

    <include layout="@layout/view_split_line"/>

    <!--确认新密码区域-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/re_new_password_text"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/re_new_password_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/re_new_password_hint"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:padding="6dp"
            android:textSize="16sp"/>
    </LinearLayout>

    <include layout="@layout/view_split_line"/>

    <!--提交按钮区域-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/submit_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/common_btn_bg"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/submit_text"
            android:textColor="@color/white"
            android:textSize="18sp"/>

    </LinearLayout>

</LinearLayout>
