<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <!--出发地目的地区域-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <AutoCompleteTextView
            android:id="@+id/start_station_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:completionThreshold="1"
            android:gravity="center"
            android:hint="@string/start_station_hint"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="25sp"/>

        <ImageView
            android:id="@+id/change_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_compare_arrows"/>

        <AutoCompleteTextView
            android:id="@+id/end_station_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:completionThreshold="1"
            android:gravity="center"
            android:hint="@string/end_station_hint"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="25sp"/>
    </LinearLayout>

    <!--日期区域-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/start_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/start_time_text"/>

        <TextView
            android:id="@+id/date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/start_date_tv"
            android:layout_marginLeft="30dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:text="2019-05-01"/>

        <View
            android:layout_width="0.8dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:background="#dbdbdb"/>

        <TextView
            android:id="@+id/start_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40dp"
            android:text="@string/start_date_text"/>

        <TextView
            android:id="@+id/time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/start_date_tv"
            android:layout_marginRight="30dp"
            android:text="00:00-24:00"
            android:textColor="@color/black"
            android:textSize="20sp"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#dbdbdb"/>

    <!--车型选项区域-->
    <RadioGroup
        android:id="@+id/model_rg"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <RadioButton
            android:id="@+id/model_all_rb"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/model_radio_btn_bg"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/model_all"
            android:textColor="@drawable/model_radio_btn_text_color"/>

        <RadioButton
            android:id="@+id/model_g_rb"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/model_radio_btn_bg"
            android:button="@null"
            android:gravity="center"
            android:text="@string/model_g"
            android:textColor="@drawable/model_radio_btn_text_color"/>

        <RadioButton
            android:id="@+id/model_t_rb"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/model_radio_btn_bg"
            android:button="@null"
            android:gravity="center"
            android:text="@string/model_t"
            android:textColor="@drawable/model_radio_btn_text_color"/>

        <RadioButton
            android:id="@+id/model_k_rb"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/model_radio_btn_bg"
            android:button="@null"
            android:gravity="center"
            android:text="@string/model_k"
            android:textColor="@drawable/model_radio_btn_text_color"/>

    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="15dp"
        android:background="#dbdbdb"/>

    <!--查询按钮区域-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/query_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/common_btn_bg"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/query_text"
            android:textColor="@color/white"
            android:textSize="18sp"/>

    </LinearLayout>

</LinearLayout>
